--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
 title: Timothy Cody # your name (or website title) here
 logo: "/images/IMG_5299.jpg?raw=true" # your photo (or logo) here
 description: > # your text below (remove <br> elements if you don't need line breaks)
-  Data Scientist with a Master's in Analytics and 3 years for experince delevering analytical reporting and data driven insights.
+  Data Scientist with a Master's in Analytics and 3 years in experince delevering analytical reporting and data driven insights.
   <br><br>
   Skills: Python, R, SQL, Power BI, Tableau
   <br><br>
